(fix) navbar: force hamburger to right edge on mobile

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -77,6 +77,9 @@ body {
   .nav-content {
     grid-template-columns: 1fr auto;
   }
+  .nav-right {
+    justify-self: end;
+  }
 }
 
 .nav-links {
